--- a/The_Notebox/Client/package.json
+++ b/The_Notebox/Client/package.json
@@ -9,6 +9,7 @@
     "concurrently": "^8.2.1",
     "react": "^18.2.0",
     "react-chrono": "^2.6.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
